--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-725.3KB/s(Youtube:不良林), server: 103.56.60.235, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.08MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.74MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-836.0KB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.11MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.78MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.66MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.45MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-515.5KB/s(Youtube:不良林), server: 193.108.118.79, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-5.03MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.81MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.26MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-207.6KB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-960.1KB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-451.7KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-310.9KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-319.8KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-283.1KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-515.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-515.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-515.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-515.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-515.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-515.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-725.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-836.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
-      - 🇩🇪 德国-515.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
