--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.03MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.81MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.26MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-207.6KB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-960.1KB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-451.7KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.81MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-310.9KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.88MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-319.8KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-283.1KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.97MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-11.12MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-558.3KB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.23MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-960.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-451.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-310.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-283.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
